# cookiecutter-brightwaylib

./: .gitignore  CHANGELOG.md  CHANGES.md  CONTRIBUTING.md  LICENSE  README.md  cookiecutter.json  pyrightconfig.json
{{cookiecutter.project_name}}/: .pre-commit-config.yaml  CHANGES.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  README.md  pyproject.toml  setup.cfg  {% if cookiecutter.open_source_license == 'BSD license' -%} LICENSE {%- endif %}  {% if cookiecutter.open_source_license == 'GPL-3.0' -%} LICENSE {%- endif %}  {% if cookiecutter.open_source_license == 'ISC' -%} LICENSE {%- endif %}
{{cookiecutter.project_name}}/.github/workflows/: conda-package-deploy.yml  python-package-deploy.yml  python-package.yml  python-test.yml
{{cookiecutter.project_name}}/conda.recipe/: meta.yaml
{{cookiecutter.project_name}}/docs/: conf.py  environment.yaml  index.md  requirements.txt  usage.md
{{cookiecutter.project_name}}/tests/: conftest.py  {% if cookiecutter.command_line_interface == 'Click' -%} test_cli.py {%- endif %}
{{cookiecutter.project_name}}/{{cookiecutter.package_name}}/: __init__.py  utils.py  {% if cookiecutter.command_line_interface == 'Click' -%} cli.py {%- endif %}
