[build-system]
requires = ["setuptools>=77.0"]
build-backend = "setuptools.build_meta"

[project]
name = "{{cookiecutter.package_name}}"
authors = [
  { name="{{cookiecutter.full_name}}", email="{{cookiecutter.email}}" }
]
maintainers = [
  { name="{{cookiecutter.full_name}}", email="{{cookiecutter.email}}" }
]
description = "{{cookiecutter.project_short_description}}"
readme = "README.md"
dynamic = ["version"]
# Add here all kinds of additional classifiers as defined under
# https://pypi.org/classifiers/
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering"
]
requires-python = ">=3.9"
dependencies = [
    # dependencies as strings with quotes, e.g. "foo"
    # You can add version requirements like "foo>2.0"
]

[project.urls]
source = "https://github.com/{{cookiecutter.github_username}}/{{cookiecutter.project_name}}"
homepage = "https://github.com/{{cookiecutter.github_username}}/{{cookiecutter.project_name}}"
tracker = "https://github.com/{{cookiecutter.github_username}}/{{cookiecutter.project_name}}/issues"

[project.optional-dependencies]
# Getting recursive dependencies to work is a pain, this
# seems to work, at least for now
testing = [
    "{{cookiecutter.package_name}}",
    "pytest",
    "pytest-cov",
    "python-coveralls"
]
dev = [
    "build",
    "pre-commit",
    "ruff",
    "pytest",
    "pytest-cov",
    "pytest-randomly",
    "setuptools",
]

license-files = ["LICENSE"]

[tool.setuptools]
include-package-data = true
packages = ["{{cookiecutter.package_name}}"]

[tool.setuptools.dynamic]
version = {attr = "{{cookiecutter.package_name}}.__version__"}

[tool.pytest.ini_options]
addopts = "--cov {{cookiecutter.package_name}} --cov-report term-missing --verbose"
norecursedirs = [
    "dist",
    "build",
    ".tox"
]
testpaths = ["tests/*.py"]

